# YGO-Nova

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README_DEV.md  THIRD_PARTY_NOTICES.md  build.bat  vcpkg.json
crash_dumps/: crash_20260702_153456.dmp  crash_20260702_153456.txt  crash_20260702_154721.dmp  crash_20260702_154721.txt  crash_20260702_160426.dmp  crash_20260702_160426.txt  crash_20260702_182114.dmp  crash_20260702_182114.txt  crash_20260702_182221.dmp  crash_20260702_232024.dmp  crash_20260702_232037.dmp  crash_20260702_232037.txt  crash_20260702_232232.dmp
deploy/: Dockerfile  HOSTING.md  docker-compose.yml  edopro-relay.service
docs/: RELEASING.md  architecture.md
installer/: EdoProPlus.iss  YGONova.iss  app_icon.rc
src/: Anim.h  ArcadeSave.h  AssetPaths.cpp  AssetPaths.h  AudioManager.cpp  AudioManager.h  CardDB.cpp  CardDB.h  CrashHandler.cpp  CrashHandler.h  DiscordRPC.cpp  DiscordRPC.h  DuelManager.cpp  DuelManager.h  Game.cpp  Game.h  ImageFetcher.cpp  ImageFetcher.h  NetSession.cpp  NetSession.h  NetSnapshots.h  Renderer.cpp  Renderer.h  Replay.h  ScriptFetcher.cpp  ScriptFetcher.h  Settings.h  SnapshotManager.cpp  SnapshotManager.h  TestingTimeline.h  UI.cpp  UI.h  UIStyle.cpp  UIStyle.h  UpdateChecker.cpp  UpdateChecker.h  Version.h  main.cpp
tools/: build_installer.ps1  check_card_compat.py  check_deck_compat.py  check_deck_targets.py  check_install.py  check_multiplayer_config.py  check_online_config.py  check_replay_files.py  check_scripts.py  fetch_md_rarity.py  fetch_progression_sets.py  fetch_setnames.py  generate_sfx.py  lookup_card_cdb.py  make_icon.py  package_release.ps1  relay_server.py  relay_smoke_test.py  run_relay_server.py  sync_assets.cmake  sync_projectignis_assets.py
